--- a/src/main/resources/templates/board/write.html
+++ b/src/main/resources/templates/board/write.html
@@ -13,7 +13,7 @@
     </div>
     <div>
         <label for="contentTextarea">본문</label>
-        <input type="text" name="content" id="contentTextarea">
+        <textarea name="content" id="contentTextarea"></textarea>
     </div>
     <div>
         <label for="writerInput">작성자</label>
