--- a/src/main/resources/templates/board/list.html
+++ b/src/main/resources/templates/board/list.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
-<head>
+<head th:replace="~{layout/main::commonHead}">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap demo</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
     <style>
         a {
             text-decoration: none;
@@ -17,54 +15,57 @@
     </style>
 </head>
 <body>
-<h2>게시물 목록</h2>
-<!--table>thead>tr>th*4^^tbody>tr>td*4-->
-<table class="table table-striped table table-hover">
-    <thead>
-    <tr>
-        <th>#</th>
-        <th>제목</th>
-        <th>작성자</th>
-        <th>작성일자</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr th:each="board : ${boardList}">
-        <td th:text="${board.id}"></td>
-        <td>
-            <a th:href="@{/board/view(id=${board.id})}" th:text="${board.title}"></a>
-        </td>
-        <td th:text="${board.writer}"></td>
-        <td th:text="${board.createdAt}"></td>
-    </tr>
-    </tbody>
-</table>
-<nav>
-    <ul class="pagination">
-        <li class="page-item" th:if="${(leftPageNumber - 10) > 0}">
-            <a class="page-link" th:href="@{/board/list(page=${leftPageNumber - 10})}">
-                <span>&laquo;</span>
-            </a>
-        </li>
-        <li class="page-item" th:classappend="${(currentPage == pageNumber) ? 'active' : ''}"
-            th:each="pageNumber :${#numbers.sequence(leftPageNumber, rightPageNumber)}">
-            <a class="page-link" th:href="@{/board/list(page=${pageNumber})}"
-               th:text="${pageNumber}">
+<div class="container">
+    <div class="row">
+        <div class="col">
+            <h2 class="mb-3">게시물 목록</h2>
+            <!--table>thead>tr>th*4^^tbody>tr>td*4-->
+            <div class="mb-3">
+                <table class="table table-striped table table-hover">
+                    <thead>
+                    <tr>
+                        <th>#</th>
+                        <th>제목</th>
+                        <th>작성자</th>
+                        <th>작성일자</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr th:each="board : ${boardList}">
+                        <td th:text="${board.id}"></td>
+                        <td>
+                            <a th:href="@{/board/view(id=${board.id})}" th:text="${board.title}"></a>
+                        </td>
+                        <td th:text="${board.writer}"></td>
+                        <td th:text="${board.createdAt}"></td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+            <nav>
+                <ul class="pagination">
+                    <li class="page-item" th:if="${(leftPageNumber - 10) > 0}">
+                        <a class="page-link" th:href="@{/board/list(page=${leftPageNumber - 10})}">
+                            <span>&laquo;</span>
+                        </a>
+                    </li>
+                    <li class="page-item" th:classappend="${(currentPage == pageNumber) ? 'active' : ''}"
+                        th:each="pageNumber :${#numbers.sequence(leftPageNumber, rightPageNumber)}">
+                        <a class="page-link" th:href="@{/board/list(page=${pageNumber})}"
+                           th:text="${pageNumber}">
 
-            </a>
-        </li>
-        <li class="page-item" th:if="${(rightPageNumber+1) <= totalPages}">
-            <a class="page-link" th:href="@{/board/list(page=${rightPageNumber+1})}">
-                <span>&raquo;</span>
-            </a>
-        </li>
-    </ul>
-</nav>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-        crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.min.js"
-        integrity="sha384-7qAoOXltbVP82dhxHAUje59V5r2YsVfBafyUDxEdApLPmcdhBPg1DKg1ERo0BZlK"
-        crossorigin="anonymous"></script>
+                        </a>
+                    </li>
+                    <li class="page-item" th:if="${(rightPageNumber+1) <= totalPages}">
+                        <a class="page-link" th:href="@{/board/list(page=${rightPageNumber+1})}">
+                            <span>&raquo;</span>
+                        </a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+    </div>
+</div>
+<th:block th:replace="~{layout/main::commonScript}"/>
 </body>
 </html>
