--- a/src/main/resources/templates/board/write.html
+++ b/src/main/resources/templates/board/write.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
-<head>
+<head th:replace="~{layout/main::commonHead}">
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
@@ -23,5 +23,6 @@
         <button>저장</button>
     </div>
 </form>
+<th:block th:replace="~{layout/main::commonScript}"/>
 </body>
 </html>
