--- a/src/main/resources/templates/board/list.html
+++ b/src/main/resources/templates/board/list.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
-<head th:replace="~{layout/main::commonHead}">
+<head th:replace="~{layout/main::commonHead('게시물 목록')}">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap demo</title>
@@ -15,6 +15,8 @@
     </style>
 </head>
 <body>
+<nav th:replace="~{layout/main::pageNavbar}"></nav>
+
 <div class="container">
     <div class="row">
         <div class="col">
@@ -66,6 +68,7 @@
         </div>
     </div>
 </div>
+
 <th:block th:replace="~{layout/main::commonScript}"/>
 </body>
 </html>
