삭제 / 삭제시 modal로 삭제확인

--- a/src/main/resources/templates/board/view.html
+++ b/src/main/resources/templates/board/view.html
@@ -32,6 +32,39 @@
                 <input type="datetime-local" id="inputCreated" th:value="${board.createdAt}" readonly
                        class="form-control">
             </div>
+            <div>
+                <button class="btn btn-outline-danger" form="removeForm"
+                        data-bs-toggle="modal"
+                        data-bs-target="#exampleModal">삭제
+                </button>
+                <button class="btn btn-outline-primary">수정</button>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="d-none">
+    <form id="removeForm" th:action="@{/board/remove}" method="post">
+        <input type="text" name="id" th:value="${board.id}">
+    </form>
+</div>
+<!--모달-->
+<!-- Modal -->
+<div class="modal fade" id="removeModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h1 class="modal-title fs-5">
+                    삭제 확인
+                </h1>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                삭제 하시겠습니까?
+            </div>
+            <div class="modal-footer">
+                <button type="submit" form="removeForm" class="btn btn-danger">삭제</button>
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">취소</button>
+            </div>
         </div>
     </div>
 </div>
