--- a/src/main/resources/templates/board/write.html
+++ b/src/main/resources/templates/board/write.html
@@ -12,7 +12,7 @@
         <div class="col col-lg-6">
 
             <h2 class="mb-3">게시물 작성</h2>
-            <form th:action="@{/board/write}">
+            <form th:action="@{/board/write}" method="post">
                 <div class="mb-3">
                     <label for="titleInput" class="form-label">제목</label>
                     <input type="text" name="title" id="titleInput" class="form-control">
