--- a/src/main/resources/templates/board/write.html
+++ b/src/main/resources/templates/board/write.html
@@ -6,7 +6,7 @@
 
 </head>
 <body>
-<nav th:replace="~{layout/main::pageNavbar}"></nav>
+<nav th:replace="~{layout/main::pageNavbar('write')}"></nav>
 <div class="container">
     <div class="row justify-content-center">
         <div class="col col-lg-6">
