--- a/src/main/resources/templates/layout/main.html
+++ b/src/main/resources/templates/layout/main.html
@@ -6,7 +6,7 @@
     <title th:text="${title}">Bootstrap demo</title>
     <style>
         body {
-            padding-top: 60px;
+            padding-top: 100px;
         }
     </style>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -14,7 +14,19 @@
 </head>
 <body>
 <!--나브바-->
-<nav th:fragment="pageNavbar" class="navbar bg-body-tertiary fixed-top">
+<nav th:fragment="pageNavbar(current)" class="navbar fixed-top">
+    <div style="position: fixed; top: 10px;" th:if="${alert != null}" class="container mb-4">
+        <div class="row">
+            <div class="col">
+                <div th:text="${alert.message}"
+                     th:classappend="|alert-${alert.code}|"
+                     class="alert"
+                     role="alert">
+                    A simple primary alert—check it out!
+                </div>
+            </div>
+        </div>
+    </div>
     <div class="container">
         <a class="navbar-brand" href="#"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar"
@@ -27,19 +39,22 @@
                     <b>메뉴</b>
                 </h5>
                 <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+
             </div>
             <div class="offcanvas-body">
                 <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                     <li class="nav-item">
-                        <a class="nav-link" th:href="@{/board/list}">목록</a>
+                        <a class="nav-link" th:href="@{/board/list}"
+                           th:classappend="${current == 'list' ? 'active' : ''}">
+                            목록
+                        </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" th:href="@{/board/write}">글쓰기</a>
+                        <a class="nav-link" th:href="@{/board/write}"
+                           th:classappend="${current == 'write' ? 'active' : ''}">
+                            글쓰기
+                        </a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" th:href="@{/board/my}">내정보</a>
-                    </li>
-
                 </ul>
                 <label class="mt-3">
                     검색
@@ -52,6 +67,7 @@
         </div>
     </div>
 </nav>
+
 <th:block th:fragment="commonScript">
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
             integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
