--- a/src/main/resources/templates/board/view.html
+++ b/src/main/resources/templates/board/view.html
@@ -37,7 +37,7 @@
                         data-bs-toggle="modal"
                         data-bs-target="#removeModal">삭제
                 </button>
-                <button class="btn btn-outline-primary">수정</button>
+                <a th:href="@{/board/edit(id=${board.id})}" class="btn btn-outline-primary">수정</a>
             </div>
         </div>
     </div>
