회원가입시 중복된 아이디 일 경우 각 셀에 밸류 채워져있기

--- a/src/main/resources/templates/layout/main.html
+++ b/src/main/resources/templates/layout/main.html
@@ -55,6 +55,12 @@
                             글쓰기
                         </a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" th:href="@{/member/signup}"
+                           th:classappend="${current == 'signup' ? 'active' : ''}">
+                            회원가입
+                        </a>
+                    </li>
                 </ul>
                 <label class="mt-3">
                     검색
