--- a/src/main/resources/templates/member/signup.html
+++ b/src/main/resources/templates/member/signup.html
@@ -14,19 +14,23 @@
             <form th:action="@{/member/signup}" method="post">
                 <div class="mb-3">
                     <label for="inputId" class="form-label">아이디</label>
-                    <input type="text" name="id" id="inputId" class="form-control">
+                    <input th:value="${member == null ? '' : member.id}" type="text" name="id" id="inputId"
+                           class="form-control">
                 </div>
                 <div class="mb-3">
                     <label for="inputPassword" class="form-label">비번</label>
-                    <input type="text" name="password" id="inputPassword" class="form-control">
+                    <input th:value="${member == null ? '' : member.password}" type="text" name="password"
+                           id="inputPassword" class="form-control">
                 </div>
                 <div class="mb-3">
                     <label for="inputNickName" class="form-label">별명</label>
-                    <input type="text" name="nickName" id="inputNickName" class="form-control">
+                    <input th:value="${member == null ? '' : member.nickName}" type="text" name="nickName"
+                           id="inputNickName" class="form-control">
                 </div>
                 <div class="mb-3">
                     <label for="textareaInfo" class="form-label">자기소개</label>
-                    <textarea name="info" id="textareaInfo" class="form-control"></textarea>
+                    <textarea th:text="${member == null ? '' : member.info}" name="info" id="textareaInfo"
+                              class="form-control"></textarea>
                 </div>
                 <div class="mb-3">
                     <button class="btn btn-outline-primary">회원가입</button>
