--- a/src/main/resources/templates/member/list.html
+++ b/src/main/resources/templates/member/list.html
@@ -10,7 +10,7 @@
     <div class="row justify-content-center">
         <div class="col col-lg-6">
             <h1 class="mb-3">회원 목록</h1>
-            <table>
+            <table class="table table-hover table-striped">
                 <thead>
                 <tr>
                     <th>ID</th>
