로그인 여부에 따라 글 작성화면 이동가능

--- a/src/main/resources/templates/layout/main.html
+++ b/src/main/resources/templates/layout/main.html
@@ -61,7 +61,7 @@
                             목록
                         </a>
                     </li>
-                    <li class="nav-item" th:if="${session.loggedInUser != null}">
+                    <li class="nav-item">
                         <a class="nav-link" th:href="@{/board/write}"
                            th:classappend="${current == 'write' ? 'active' : ''}">
                             글쓰기
