외래키 제약사항 추가 / 회원만 글작성 가능하므로 board.writer 가 member.id를 참조하도록

--- a/src/main/resources/templates/board/view.html
+++ b/src/main/resources/templates/board/view.html
@@ -25,7 +25,7 @@
             </div>
             <div class="mb-3">
                 <label for="inputWriter" class="form-label">작성자</label>
-                <input type="text" id="inputWriter" th:value="${board.writer}" readonly class="form-control">
+                <input type="text" id="inputWriter" th:value="${board.writer.nickName}" readonly class="form-control">
             </div>
             <div class="mb-3">
                 <label for="inputCreated" class="form-label">작성일시</label>
