--- a/src/main/resources/templates/board/write.html
+++ b/src/main/resources/templates/board/write.html
@@ -24,7 +24,7 @@
                 <div class="mb-3">
                     <label for="writerInput" class="form-label">작성자</label>
                     <input type="text" name="writer" id="writerInput" class="form-control"
-                           th:value="${session.loggedInUser.nickName}" readonly>
+                           th:value="${session.loggedInUser.id}" readonly>
                 </div>
                 <div class="mb-3">
                     <button class="btn btn-outline-primary">저장</button>
