--- a/src/main/resources/templates/member/login.html
+++ b/src/main/resources/templates/member/login.html
@@ -12,7 +12,7 @@
             <form th:action="@{/member/login}" method="post">
                 <div class="mb-3">
                     <label for="inputId" class="form-label">아이디</label>
-                    <input type="text" class="form-control" id="inputId" name="id">
+                    <input type="text" class="form-control" id="inputId" name="id" th:value="${id == null ? '' : id}">
                 </div>
                 <div class="mb-3">
                     <label for="inputPassword" class="form-label">비밀번호</label>
