--- a/src/main/resources/templates/member/login.html
+++ b/src/main/resources/templates/member/login.html
@@ -20,7 +20,10 @@
                 </div>
                 <div class="mb-3">
                     <button class="btn btn-primary">로그인</button>
+                    <a th:href="@{/member/signup}" class="btn btn-secondary">회원가입</a>
                 </div>
+
+
             </form>
         </div>
     </div>
