--- a/src/main/resources/templates/board/list.html
+++ b/src/main/resources/templates/board/list.html
@@ -4,6 +4,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap demo</title>
+    <style>
+
+        span {
+            width: 50%;
+            justify-content: center;
+        }
+    </style>
 </head>
 <body>
 <nav th:replace="~{layout/main::pageNavbar('list')}"></nav>
@@ -12,6 +19,7 @@
     <div class="row">
         <div class="col">
             <h2 class="mb-3">게시물 목록</h2>
+
             <!--table>thead>tr>th*4^^tbody>tr>td*4-->
             <div class="mb-3">
                 <table class="table table-striped table table-hover">
@@ -27,7 +35,8 @@
                     <tr th:each="board : ${boardList}">
                         <td th:text="${board.id}"></td>
                         <td>
-                            <a th:href="@{/board/view(id=${board.id})}" th:text="${board.title}"></a>
+                            <a style="text-decoration: none" th:href="@{/board/view(id=${board.id})}"
+                               th:text="${board.title}"></a>
                         </td>
                         <td th:text="${board.writer.nickName}"></td>
                         <td th:text="${board.createdAt}"></td>
@@ -35,26 +44,51 @@
                     </tbody>
                 </table>
             </div>
+
             <nav>
+
                 <ul class="pagination justify-content-center">
                     <li class="page-item" th:if="${(leftPageNumber - 10) > 0}">
-                        <a class="page-link" th:href="@{/board/list(page=${leftPageNumber - 10})}">
+                        <a class="page-link"
+                           th:href="@{/board/list(page=${leftPageNumber - 10}, keyword=${param.keyword})}">
                             <span>&laquo;</span>
                         </a>
                     </li>
+
                     <li class="page-item" th:classappend="${(currentPage == pageNumber) ? 'active' : ''}"
                         th:each="pageNumber :${#numbers.sequence(leftPageNumber, rightPageNumber)}">
-                        <a class="page-link" th:href="@{/board/list(page=${pageNumber})}"
+                        <a class="page-link" th:href="@{/board/list(page=${pageNumber}, keyword=${param.keyword})}"
                            th:text="${pageNumber}">
 
                         </a>
+
                     </li>
                     <li class="page-item" th:if="${(rightPageNumber+1) <= totalPages}">
-                        <a class="page-link" th:href="@{/board/list(page=${rightPageNumber+1})}">
+                        <a class="page-link"
+                           th:href="@{/board/list(page=${rightPageNumber+1}, keyword=${param.keyword})}">
                             <span>&raquo;</span>
                         </a>
+
                     </li>
+
+
+                    <a style="margin-left: 30px" th:href="@{/board/write}" class="btn btn-outline-secondary">글쓰기</a>
+
+
                 </ul>
+                <form style="justify-content: center" th:action="@{/board/list}" class="d-flex mt-30">
+                    <input style="width: auto" type="text"
+                           class="form-control me-2"
+                           name="keyword"
+                           th:value="${(param.keyword == null || param.keyword[0].isBlank()) ? '' : param.keyword[0]}">
+                    <button class="btn btn-outline-success">
+                            <span style="word-break: keep-all">
+                                <span>
+                                검색
+                                </span>
+                            </span>
+                    </button>
+                </form>
             </nav>
         </div>
     </div>
