--- a/src/main/resources/templates/board/list.html
+++ b/src/main/resources/templates/board/list.html
@@ -3,6 +3,7 @@
 <head th:replace="~{layout/main::commonHead('게시물 목록')}">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <title>Bootstrap demo</title>
     <style>
 
@@ -72,7 +73,9 @@
                     </li>
 
 
-                    <a style="margin-left: 30px" th:href="@{/board/write}" class="btn btn-outline-secondary">글쓰기</a>
+                    <a style="margin-left: 30px" th:href="@{/board/write}" class="btn btn-outline-secondary">
+                        <i class="fa-solid fa-pencil"></i>
+                    </a>
 
 
                 </ul>
@@ -83,9 +86,9 @@
                            th:value="${(param.keyword == null || param.keyword[0].isBlank()) ? '' : param.keyword[0]}">
                     <button class="btn btn-outline-success">
                             <span style="word-break: keep-all">
-                                <span>
-                                검색
-                                </span>
+
+                                <i class="fa-solid fa-magnifying-glass"></i>
+
                             </span>
                     </button>
                 </form>
