--- a/src/main/resources/templates/layout/main.html
+++ b/src/main/resources/templates/layout/main.html
@@ -3,6 +3,10 @@
 <head th:fragment="commonHead(title)">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    />
     <title th:text="${title}">Bootstrap demo</title>
     <style>
         body {
@@ -104,7 +108,7 @@
                                th:value="${(param.keyword == null || param.keyword[0].isBlank()) ? '' : param.keyword[0]}">
                         <button class="btn btn-outline-success">
                             <span style="word-break: keep-all">
-                                검색
+                                <i class="fa-solid fa-magnifying-glass"></i>
                             </span>
                         </button>
                     </form>
